package biblioteca.ui;

import java.util.Scanner;

import biblioteca.factory.UsuarioFactory;
import biblioteca.model.Livro;
import biblioteca.model.Usuario;
import biblioteca.service.Biblioteca;

/***********************************************************************************
 * Universidade Católica de Brasília - UCB                                         *
 * Disciplina: Programação Orientada a Objetos                                     *
 * Professor: Alexandre S. D. Santos                                               *
 * Atividade: N2 - Evolução do Sistema de Biblioteca                               *
 * Data: 14/06/2026                                                                *
 *                                                                                 *
 * Camada de APRESENTAÇÃO (CLI).                                                    *
 * Responsável por exibir o menu e coletar os dados via Scanner, delegando toda    *
 * a lógica para a camada de serviço (Biblioteca). Usa a UsuarioFactory para       *
 * criar o usuário do tipo escolhido.                                              *
 ***********************************************************************************/

public class AcoesMenu {

    public void imprimirMenuPrincipal() {
        System.out.println("\n============================================");
        System.out.println("   SISTEMA DE GERENCIAMENTO DE BIBLIOTECA   ");
        System.out.println("============================================");
        System.out.println("1 - Cadastrar livro");
        System.out.println("2 - Cadastrar usuário");
        System.out.println("3 - Realizar empréstimo");
        System.out.println("4 - Realizar devolução");
        System.out.println("5 - Listar livros");
        System.out.println("6 - Listar usuários cadastrados");
        System.out.println("7 - Listar empréstimos ativos");
        System.out.println("8 - Ver histórico de empréstimos");
        System.out.println("0 - Sair");
        System.out.println("============================================");
        System.out.print("Escolha uma opção: ");
    }

    public void cadastrarLivro(Scanner scanner, Biblioteca biblioteca) {
        System.out.println("\n--- Cadastro de Livro ---");

        int idLivro = EntradaConsole.lerInteiroPositivo(scanner, "ID do livro: ");

        // Validação antecipada: verifica duplicidade antes de pedir os demais dados.
        if (biblioteca.buscarLivro(idLivro) != null) {
            System.out.println("Erro: Já existe um livro cadastrado com o ID "
                    + idLivro + ". Cadastro cancelado.");
            return;
        }

        String titulo = EntradaConsole.lerTextoObrigatorio(scanner, "Título");
        String autor = EntradaConsole.lerTextoObrigatorio(scanner, "Autor");

        if (biblioteca.adicionarLivro(new Livro(idLivro, titulo, autor))) {
            System.out.println("Livro cadastrado com sucesso!");
        }
    }

    public void cadastrarUsuario(Scanner scanner, Biblioteca biblioteca) {
        System.out.println("\n--- Cadastro de Usuário ---");
        System.out.println("Tipo de usuário:");
        System.out.println("1 - Aluno");
        System.out.println("2 - Professor");

        // Re-pergunta o tipo até ser 1 ou 2, em vez de cancelar por um engano.
        int tipoUsuario;
        do {
            tipoUsuario = EntradaConsole.lerInteiro(scanner, "Escolha: ");
            if (tipoUsuario != 1 && tipoUsuario != 2) {
                System.out.println("Opção inválida. Digite 1 (Aluno) ou 2 (Professor).");
            }
        } while (tipoUsuario != 1 && tipoUsuario != 2);

        int idUsuario = EntradaConsole.lerInteiroPositivo(scanner, "ID do usuário: ");

        // Validação antecipada de duplicidade.
        if (biblioteca.buscarUsuario(idUsuario) != null) {
            System.out.println("Erro: Já existe um usuário cadastrado com o ID "
                    + idUsuario + ". Cadastro cancelado.");
            return;
        }

        String nome = EntradaConsole.lerTextoObrigatorio(scanner, "Nome");

        String rotulo = (tipoUsuario == 1) ? "Matrícula" : "Departamento";
        String detalhe = EntradaConsole.lerTextoObrigatorio(scanner, rotulo);

        // A criação da subclasse correta é responsabilidade da Factory.
        Usuario usuario = UsuarioFactory.criarPorOpcao(tipoUsuario, idUsuario, nome, detalhe);
        if (biblioteca.adicionarUsuario(usuario)) {
            System.out.println(usuario.getTipoUsuario() + " cadastrado com sucesso!");
        }
    }

    public void realizarEmprestimo(Scanner scanner, Biblioteca biblioteca) {
        System.out.println("\n--- Realizar Empréstimo ---");

        int idLivro = EntradaConsole.lerInteiro(scanner, "ID do livro: ");
        int idUsuario = EntradaConsole.lerInteiro(scanner, "ID do usuário: ");

        // O serviço aplica as regras e devolve a mensagem; a UI apenas exibe.
        System.out.println(biblioteca.realizarEmprestimo(idLivro, idUsuario));
    }

    public void realizarDevolucao(Scanner scanner, Biblioteca biblioteca) {
        System.out.println("\n--- Realizar Devolução ---");

        int idLivro = EntradaConsole.lerInteiro(scanner, "ID do livro a devolver: ");

        System.out.println(biblioteca.realizarDevolucao(idLivro));
    }

    // Submenu de histórico (recupera a ideia de filtros do N1, agora vinda do banco).
    public void exibirMenuHistorico(Scanner scanner, Biblioteca biblioteca) {
        System.out.println("\n--- Histórico de Empréstimos ---");
        System.out.println("1 - Todos (ativos e devolvidos)");
        System.out.println("2 - Apenas ativos");
        System.out.println("3 - Apenas devolvidos");
        int opcao = EntradaConsole.lerInteiro(scanner, "Escolha: ");

        switch (opcao) {
            case 1:
                biblioteca.listarHistoricoEmprestimos();
                break;
            case 2:
                biblioteca.listarEmprestimosAtivos();
                break;
            case 3:
                biblioteca.listarEmprestimosDevolvidos();
                break;
            default:
                System.out.println("Opção inválida.");
                break;
        }
    }
}
